exports[`SmallButton should accept a className prop 1`] = `
<SmallButton text="See All" className="harambe">
  <button className="
      btn btn--small@next
      
      harambe
    " style={{...}} onClick={[undefined]}>
    See All
  </button>
</SmallButton>
`;

exports[`SmallButton should accept a className prop 2`] = `
<SmallButton text="See All" linkUrl="http://example.com" className="harambe">
  <Link className="
      btn btn--small@next
      
      harambe
    " style={{...}} onClick={[undefined]} to="http://example.com" onlyActiveOnIndex={false}>
    <a className="
        btn btn--small@next
        
        harambe
      " style={{...}} onClick={[Function]}>
      See All
    </a>
  </Link>
</SmallButton>
`;

exports[`SmallButton should accept a linkUrl and render an anchor instead of button 1`] = `
<SmallButton text="See All" linkUrl="http://example.com">
  <Link className="
      btn btn--small@next
      
      
    " style={{...}} onClick={[undefined]} to="http://example.com" onlyActiveOnIndex={false}>
    <a className="
        btn btn--small@next
        
        
      " style={{...}} onClick={[Function]}>
      See All
    </a>
  </Link>
</SmallButton>
`;

exports[`SmallButton should accept a style prop 1`] = `
<SmallButton text="See All" style={{...}}>
  <button className="
      btn btn--small@next
      
      
    " style={{...}} onClick={[undefined]}>
    See All
  </button>
</SmallButton>
`;

exports[`SmallButton should accept a style prop 2`] = `
<SmallButton text="See All" linkUrl="http://example.com" style={{...}}>
  <Link className="
      btn btn--small@next
      
      
    " style={{...}} onClick={[undefined]} to="http://example.com" onlyActiveOnIndex={false}>
    <a className="
        btn btn--small@next
        
        
      " style={{...}} onClick={[Function]}>
      See All
    </a>
  </Link>
</SmallButton>
`;

exports[`SmallButton should accept an onClick handler 1`] = `
<SmallButton text="See All" onClick={[Function]}>
  <button className="
      btn btn--small@next
      
      
    " style={{...}} onClick={[Function]}>
    See All
  </button>
</SmallButton>
`;

exports[`SmallButton should accept disabled prop 1`] = `
<SmallButton text="See All" disabled={true}>
  <button className="
      btn btn--small@next
      btn--disabled
      
    " style={{...}} onClick={[undefined]}>
    See All
  </button>
</SmallButton>
`;

exports[`SmallButton should accept disabled prop 2`] = `
<SmallButton text="See All" linkUrl="http://example.com" disabled={true}>
  <Link className="
      btn btn--small@next
      btn--disabled
      
    " style={{...}} onClick={[undefined]} to="http://example.com" onlyActiveOnIndex={false}>
    <a className="
        btn btn--small@next
        btn--disabled
        
      " style={{...}} onClick={[Function]}>
      See All
    </a>
  </Link>
</SmallButton>
`;

exports[`SmallButton should accept text prop 1`] = `
<SmallButton text="See All">
  <button className="
      btn btn--small@next
      
      
    " style={{...}} onClick={[undefined]}>
    See All
  </button>
</SmallButton>
`;

exports[`SmallButton should accept text prop 2`] = `
<SmallButton text="See All" linkUrl="http://example.com">
  <Link className="
      btn btn--small@next
      
      
    " style={{...}} onClick={[undefined]} to="http://example.com" onlyActiveOnIndex={false}>
    <a className="
        btn btn--small@next
        
        
      " style={{...}} onClick={[Function]}>
      See All
    </a>
  </Link>
</SmallButton>
`;

exports[`SmallButton should render with minimal props 1`] = `
<SmallButton>
  <button className="
      btn btn--small@next
      
      
    " style={{...}} onClick={[undefined]} />
</SmallButton>
`;
